--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
@@ -20,7 +22,7 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <GridPane alignment="TOP_CENTER" prefHeight="475.0" prefWidth="390.0" GridPane.columnIndex="1">
+      <GridPane alignment="TOP_CENTER" prefHeight="555.0" prefWidth="390.0" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" prefWidth="71.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="231.0" />
@@ -31,14 +33,15 @@
             <RowConstraints maxHeight="106.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="42.0" valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="374.0" minHeight="10.0" prefHeight="304.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="58.0" minHeight="0.0" prefHeight="43.0" valignment="BOTTOM" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <TableView fx:id="table" GridPane.columnSpan="3" GridPane.rowIndex="3">
               <columns>
-                <TableColumn prefWidth="184.0" text="C1" />
-                <TableColumn prefWidth="185.0" text="C2" />
+                <TableColumn fx:id="cID" prefWidth="184.0" text="id" />
+                <TableColumn fx:id="cName" prefWidth="185.0" text="Name" />
+                <TableColumn fx:id="cPos" prefWidth="185.0" text="Position" />
               </columns>
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -57,19 +60,27 @@
                   <Font size="13.0" />
                </font>
             </PasswordField>
-            <Button fx:id="logButton" mnemonicParsing="false" onAction="#login" text="Log in" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
-            <TextField fx:id="logField" GridPane.columnSpan="3" GridPane.rowIndex="5">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </TextField>
+            <TextArea fx:id="logArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <children>
+                  <Button fx:id="logButton" mnemonicParsing="false" onAction="#login" onKeyPressed="#login" prefHeight="27.0" prefWidth="65.0" text="Log in">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="logoutButton" disable="true" mnemonicParsing="false" onAction="#logout" onKeyPressed="#login" text="Log out">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
    </children>
