--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -22,7 +22,7 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <GridPane alignment="TOP_CENTER" prefHeight="555.0" prefWidth="390.0" GridPane.columnIndex="1">
+      <GridPane alignment="TOP_CENTER" prefHeight="600.0" prefWidth="390.0" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.0" minWidth="10.0" prefWidth="71.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="231.0" />
@@ -30,11 +30,11 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="106.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="42.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="374.0" minHeight="10.0" prefHeight="304.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="58.0" minHeight="0.0" prefHeight="43.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="106.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="133.0" minHeight="10.0" prefHeight="36.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="375.0" minHeight="10.0" prefHeight="344.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="58.0" minHeight="0.0" prefHeight="47.0" valignment="BOTTOM" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <TableView fx:id="table" GridPane.columnSpan="3" GridPane.rowIndex="3">
@@ -50,7 +50,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-             <TextField fx:id="loginField" prefHeight="30.0" prefWidth="258.0" promptText="Login" GridPane.columnIndex="1">
+             <TextField fx:id="loginField" prefHeight="30.0" prefWidth="258.0" promptText="Login" text="owner" GridPane.columnIndex="1">
                  <font>
                      <Font size="14.0" />
                  </font>
@@ -60,7 +60,6 @@
                   <Font size="13.0" />
                </font>
             </PasswordField>
-            <TextArea fx:id="logArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="5" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="35.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <opaqueInsets>
                   <Insets />
@@ -76,6 +75,15 @@
                         <Font size="13.0" />
                      </font>
                   </Button>
+               </children>
+            </HBox>
+             <TextArea fx:id="logArea" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
+               <children>
+                  <TextField fx:id="id" prefHeight="27.0" prefWidth="92.0" promptText="id" />
+                  <TextField fx:id="name" prefHeight="27.0" prefWidth="92.0" promptText="Name" />
+                  <TextField fx:id="position" prefHeight="27.0" prefWidth="92.0" promptText="Position" />
+                  <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addItem" onKeyPressed="#addItem" text="Add" />
                </children>
             </HBox>
          </children>
